cambios efectuados: se centro la tabla de información personal vertical y horizontalmente

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
       </nav>
 
 
-      <main class="bg-warning mt-150">
+      <main class="bg-warning">
         <div class="container text-center">
             <div class="row">
-              <div class="col">
+              <div class="col tablaInformacionPersonal">
                
                 <table class="table">
                     <thead>
