corrección de grids rejillas en bootstrap

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
       <main class="bg-warning">
-        <div class="container text-center">
+        <div class="container">
             <div class="row">
               <div class="col tablaInformacionPersonal">
                
@@ -96,7 +96,7 @@
     
               </div>
               <div class="col">
-                <h2 class="col-12">Experiencia</h2>
+                <h2>Experiencia</h2>
                 <h3>Perfect for CV / Resume or portfolio website</h3>
                 <div class="container text-center">
                     <div class="row">
@@ -125,7 +125,7 @@
 
 
         <div class="row contenedorProfesionalSkills-Employment">
-            <div class="col-8 bg-success">
+            <div class="col-12 col-md-6 bg-success">
                 <h3 class="text-center">Profesional Skills</h3>
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
@@ -178,7 +178,7 @@
                     </button>
                   </div>
             </div>
-            <div class="col-4 bg-danger-subtle">
+            <div class="col-12 col-md-6 bg-danger-subtle">
                 <h3 class="text-center">Employment</h3>
                 <ul id="listadoEmpleos">
                     <li>Desarrollador web en mi casa</li>
@@ -193,7 +193,11 @@
     </div>
 
       <footer>
-       <p class="text-center">Derechos Reservados</p>
+        <div class="row">
+          <div class="col">
+            <p class="text-center">Derechos Reservados</p>
+          </div>
+        </div>
       </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
