Se arreglo la posición de la foto, los tamaños responsivos del nav, y se centro verticalmente la última parte y se le cambio de fodo de pantalla al body y a la barra nav por defecto tenia un color se le cambio

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Menú</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -62,7 +62,7 @@
       </nav>
 
 
-      <main class="bg-warning">
+      <main>
         <div class="container">
             <div class="row">
               <div class="col tablaInformacionPersonal">
@@ -96,7 +96,7 @@
     
               </div>
               <div class="col">
-                <h2>Experiencia</h2>
+                <h2 class="text-center">Experiencia</h2>
                 <h3>Perfect for CV / Resume or portfolio website</h3>
                 <div class="container text-center">
                     <div class="row">
@@ -125,7 +125,7 @@
 
 
         <div class="row contenedorProfesionalSkills-Employment">
-            <div class="col-12 col-md-6 bg-success">
+            <div class="col-12 col-md-6">
                 <h3 class="text-center">Profesional Skills</h3>
                 <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
@@ -178,7 +178,7 @@
                     </button>
                   </div>
             </div>
-            <div class="col-12 col-md-6 bg-danger-subtle">
+            <div class="col-12 col-md-6 m-auto">
                 <h3 class="text-center">Employment</h3>
                 <ul id="listadoEmpleos">
                     <li>Desarrollador web en mi casa</li>
