Se corrrigió el tamaño en vertical de las imágenes del carrusel y se centraron

--- a/index.html
+++ b/index.html
@@ -141,31 +141,31 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="./assets/img/cisco.png" class="d-block w-100" alt="cisco">
+                        <img src="./assets/img/cisco.png" class="d-block w-75 m-auto" alt="cisco">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/bootStrap.svg" class="d-block w-100" alt="bootstrap">
+                        <img src="./assets/img/bootStrap.svg" class="d-block w-75 m-auto" alt="bootstrap">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/html.png" class="d-block w-100" alt="html">
+                        <img src="./assets/img/html.png" class="d-block w-75 m-auto" alt="html">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/Java.png" class="d-block w-100" alt="java">
+                        <img src="./assets/img/Java.png" class="d-block w-75 m-auto" alt="java">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/javascript.png" class="d-block w-100" alt="javascript">
+                        <img src="./assets/img/javascript.png" class="d-block w-75 m-auto" alt="javascript">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/huaweiHCIA.jfif" class="d-block w-100" alt="huawei">
+                        <img src="./assets/img/huaweiHCIA.jfif" class="d-block w-75 m-auto" alt="huawei">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/linuxServer.jpg" class="d-block w-100" alt="linuxServer">
+                        <img src="./assets/img/linuxServer.jpg" class="d-block w-75 m-auto" alt="linuxServer">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/linuxServerVariasOS.jpg" class="d-block w-100" alt="linuxServer">
+                        <img src="./assets/img/linuxServerVariasOS.jpg" class="d-block w-75 m-auto" alt="linuxServer">
                       </div>
                       <div class="carousel-item">
-                        <img src="./assets/img/windowsServer.png" class="d-block w-100" alt="windowsServer">
+                        <img src="./assets/img/windowsServer.png" class="d-block w-75 m-auto" alt="windowsServer">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
